# bizsurvival515

./: .gitignore  LICENSE  README.md  environment.yml  mlflow.db  pyproject.toml
.github/workflows/: build_tests.yml
app/: Home.py  home.py
app/.streamlit/: config.toml
app/map_templates/: app.js  index.html
app/pages/: 01_map.py  02_logistic_regression.py  03_cox_models.py  04_findings.py  2_Logistic_Regression.py  3_Cox_Models.py  4_Findings.py
app/utils/: artifact_loader.py  (+4 more)
bizsurvival.egg-info/: PKG-INFO  SOURCES.txt
docs/: component_spec.md  functional_spec.md  milestones.md  pipeline.md  users.md
examples/: walkthrough.md  walkthrough.py
map/: README.md  app.js  index.html  plotly_test.py  serve_map.py  tech_review_maps.md
model/: mapbox.ipynb  model.ipynb  preprocess.ipynb
notebooks/: NYC 311 Service Request Job.ipynb  NYC 311 Service Requests Draft.ipynb  NYC Issued Licenses.ipynb  nyc_311_service_request_job.py  nyc_issued_licenses_job.py  nyc_preprocess_pyspark_job.py  nyc_ussued_licenses_job.py  test-notebook.ipynb
pipeline/: cox.py  inspect_cox.py  inspect_logistic.py  logistic.py  mapbox.py  preprocess.py  run_pipeline.py  test_cox.py  test_logistic.py  test_mapbox.py  test_preprocess.py  utils.py
tests/: pipeline_test_helpers.py  test_artifact_loader_utils.py  test_cox.py  test_cox_feature_builder_utils.py  test_dummy.py  test_feature_builder_utils.py  test_helpers.py  test_inspect_cox.py  test_inspect_logistic.py  test_logistic.py  test_mapbox.py  test_prediction_tools_utils.py  test_preprocess.py  test_run_pipeline.py  test_utils.py
(+78 files in other folders)
