[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bizsurvival"
version = "0.0.1"
description = "A business survival analysis package for DATA 515"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "numpy",
    "pandas",
    "scikit-learn",
    "streamlit",
    "scipy",
    "lifelines"
]

[project.optional-dependencies]
dev = [
    "pylint",
    "coverage",
    "coveralls",
    "build"
]

[tool.setuptools]
packages = ["pipeline"]